Ensure answers to Questions don't wrap
When the Yes/No answers on the Questions page were brought in close (thin
window, etc), the answres would wrap and look bad. This change makes sure
they're always on the same line.

--- a/app/assets/stylesheets/permits.scss
+++ b/app/assets/stylesheets/permits.scss
@@ -56,7 +56,9 @@
         }
 
         .answers {
-          display: inline;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
         }
       }
     }
